force-app/main/default/objects/Site_Visit_Appointment__c/Site_Visit_Appointment__c.object-meta.xml
<CustomObject>
    <label>Site Visit Appointment</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Site Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visit Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>