force-app/main/default/objects/Site_Visit_Appointment__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Visit Appointments</relationshipLabel>
    <relationshipName>Site_Visit_Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>