force-app/main/default/objects/Site_Visit_Appointment__c/fields/Customer_F__c.field-meta.xml
<CustomField>
    <fullName>Customer_F__c</fullName>
    <label>Customer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>