force-app/main/default/objects/Site_Visit_Appointment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Site Visit Appointments</relationshipLabel>
    <relationshipName>Site_Visit_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>