force-app/main/default/objects/Site_Visit_Appointment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Site Visit Appointments</relationshipLabel>
    <relationshipName>Site_Visit_Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>