force-app/main/default/objects/Site_Visit_Appointment__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Site Visit Appointments</relationshipLabel>
    <relationshipName>Site_Visit_Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>