force-app/main/default/objects/Site_Visit_Appointment__c/fields/Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_Time__c</fullName>
    <label>Visit Date &amp; Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>